--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+    <meta charset="UTF-8">
     <title>Error</title>
+    <link rel="stylesheet" th:href="@{/css/style.min.css}" />
 </head>
 <body>
+    <header th:replace="~{fragments/navbar :: navbar}"></header>
 
-    <h1>Oops! Something went wrong.</h1>
-    <p>
-        The application encountered an error.
-    </p>
-    
-    <div th:if="${error}" style="color: red;">
-        Error message: <span th:text="${error}"></span>
-    </div>
-    
-    <p>
-        <a th:href="@{/projects}">Go to Home Page</a>
-    </p>
+    <main class="container">
+        <div class="section">
+            <h1>Oops! Something went wrong.</h1>
+            <p>The application encountered an error.</p>
 
+            <div th:if="${error}" class="alert alert-error">
+                Error message: <span th:text="${error}"></span>
+            </div>
+
+            <p>
+                <a th:href="@{/projects}" class="back-link">Go to Home Page</a>
+            </p>
+        </div>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Project Management System. All rights reserved.</p>
+    </footer>
 </body>
 </html>
